#1455
Add example responses to swagger
